package com.example.idphotogenerator;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;
import org.springframework.boot.context.properties.EnableConfigurationProperties;

@SpringBootApplication
@EnableConfigurationProperties
public class IdPhotoGeneratorApplication {
    public static void main(String[] args) {
        SpringApplication.run(IdPhotoGeneratorApplication.class, args);
    }
}